<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="___app_was_not_found">%s was not found!</string>
    <string name="a">a</string>
    <string name="about">About</string>
    <string name="about_subtext">Hi\nMy name is Uriah Shaul Mandel, and i\'m the developer of this platform.\nI live in
        Tel Aviv.\nIv\'e spent a lot of time and effort to make this platform, and released it for free, for everyone to
        use\nyou are more than welcome to contact me, by email.\nbaldphone.contact@gmail.com
    </string>
    <string name="accessibility_level">Accessibility Level</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="accidental_touches">Accidental Touch Guard</string>
    <string name="accidental_touches_settings_subtext">The guard blocks your phone from touch input when the phone is
        covered\nif you have problems with it you can turn it off
    </string>
    <string name="accidental_touches_subtext">Accidental touch was detected\npress OK to continue using the phone\nif
        this message keeps appearing you can disable it in the accessibility settings
    </string>
    <string name="acknowledgments">Acknowledgments</string>
    <string name="ad">Ad</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_alarm_quickly">Add Timer</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_emergency_contact">Add</string>
    <string name="add_pill">Add Pill</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="add_to_home">Add to Home</string>
    <string name="add_to_sos">Add to SOS</string>
    <string name="address">Address</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="afternoon">Afternoon</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="alarm_volume_subtext">Choose Volume for Alarms.\nVolume increases from left to right.</string>
    <string name="alarms">Alarms</string>
    <string name="alarms_repeats_every">Alarm repeats every</string>
    <string name="all_alarms">All Alarms</string>
    <string name="all_pills">All Pills</string>
    <string name="allow">Allow</string>
    <string name="already_setted">Already Setted!\nClick here to change to it</string>
    <string name="an_error_has_occurred">An error has occurred!</string>
    <string name="and_welcome_to_baldphone">and welcome to Baldphone</string>
    <string name="animation_tag">ANIMATION_TAG</string>
    <string name="apps">Apps</string>
    <string name="are_you_sure_you_want_to_call_emergency_services">Are you sure you want to call Emergency Services?
    </string>
    <string name="are_you_sure_you_want_to_delete___">Are you sure you want to delete %s?</string>
    <string name="arrows">Arrows</string>
    <string name="arrows_for_scrolling">Arrows for scrolling</string>
    <string name="arrows_for_scrolling_subtext">Choose whether you want to scroll with: \n1.arrows (recommended if hands
        are shaking)\n2.regular swiping
    </string>
    <string name="assistant">Assistant</string>
    <string name="at_least_one_day_must_be_selected">At least one day must be selected!</string>
    <string name="auto_brightness">Auto\nBrightness</string>
    <string name="back">Back</string>
    <string name="backspace">backspace</string>
    <string name="baldphone_bla_allow_permission">Please allow the following permissions:</string>
    <string name="baldphone_updated">BaldPhone Updated</string>
    <string name="blocked">Blocked</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_subtext">Change Brightness.</string>
    <string name="cache_cleared_successfully">Cache Cleared Successfully!</string>
    <string name="calculator">Calculator</string>
    <string name="call">Call</string>
    <string name="calling">Calling</string>
    <string name="call_log">Call Log:</string>
    <string name="call_subtext">This permission is required in order to call contacts.</string>
    <string name="calling__">Calling %s</string>
    <string name="camera">Camera</string>
    <string name="camera_subtext">This permission is required in order to turn on the flashlight.</string>
    <string name="cancel">Cancel</string>
    <string name="change_pills_time">Change Pills Time</string>
    <string name="change_system_settings">Change System Settings</string>
    <string name="change_system_settings_subtext">Please allow BaldPhone to change settings, such as increasing the font
        size and changing the brightness.
    </string>
    <string name="choose_friday">Fri</string>
    <string name="choose_monday">Mon</string>
    <string name="choose_saturday">Sat</string>
    <string name="choose_sunday">Sun</string>
    <string name="choose_thursday">Thu</string>
    <string name="choose_tuesday">Tue</string>
    <string name="choose_wednesday">Wed</string>
    <string name="clear">Clear</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_data">Clear All Data</string>
    <string name="clear_data_subtext">Are you sure you want to delete all data?</string>
    <string name="clear_data_subtext2">100%?</string>
    <string name="clear_data_subtext3">1000000% sure?\npressing yes will delete all data!</string>
    <string name="clicked">Clicked!</string>
    <string name="clock">Clock</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="connection_settings">Connection</string>
    <string name="contact_must_has_name">Contact must has a Name!</string>
    <string name="contact_not_created">Contact not created!</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_read_subtext">This permission is required in order to read contacts.</string>
    <string name="contacts_subtext">This permission is required in order to add new contacts.</string>
    <string name="crash">Oops!\nBaldPhone ran into a problem and will now restart.</string>
    <string name="current_time">Current Time</string>
    <string name="custom">Custom</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="delete___">Delete %s?</string>
    <string name="delete_all_alarms">Delete all alarms</string>
    <string name="delete_all_pills">Delete all pills</string>
    <string name="details">Details</string>
    <string name="dialer">Dialer</string>
    <string name="display_settings">Display</string>
    <string name="do_you_want_to_add___to_your_contacts">Do you want to add %s to your contacts?</string>
    <string name="done">Done</string>
    <string name="down">Down</string>
    <string name="edit">Edit</string>
    <string name="email">Email:</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="enable_notification_access_subtext">Please give BaldPhone access to notification.</string>
    <string name="enter">Enter</string>
    <string name="enter_contact_or_phone_number">Enter contact name:</string>
    <string name="evening">Evening</string>
    <string name="example">Example</string>
    <string name="example_of_different_text_sizes">Example of different text sizes\nShould be readable and not to
        overflow.
    </string>
    <string name="external_storage_subtext">This permission is required in order to save pictures.</string>
    <string name="favorites">Favorites</string>
    <string name="feedback">Send Feedback</string>
    <string name="feedback_cannot_be_empty">Feedback cannot be empty!</string>
    <string name="feedback_sent_successfully">Feedback sent successfully!</string>
    <string name="first_please_select_how_you_want_to_interact_with_buttons">Please select the level of accessibility
    </string>
    <string name="font">Font</string>
    <string name="font_subtext">Choose font size for the entire phone.\nMay need to restart device to see changes
    </string>
    <string name="friday">Friday</string>
    <string name="go_through_tutorial">Tutorial</string>
    <string name="google">Google</string>
    <string name="have_hard_time_using_the_phone_s_keyboard_use_baldphone_s_big_keyboard_instead">Have hard time using
        the phone\'s keyboard? use Baldphone\'s BIG keyboard instead
    </string>
    <string name="hebrew">0</string>
    <string name="hello">Hello</string>
    <string name="help">Video Tutorial</string>
    <string name="hide">Hide</string>
    <string name="high_level">High Level</string>
    <string name="home">Home</string>
    <string name="home_phone_number">Home phone number</string>
    <string name="hour">Hour</string>
    <string name="how_can_i_help">How can I help?</string>
    <string name="huge">Huge</string>
    <string name="internet">Internet</string>
    <string name="invoked_in">Invoked in:</string>
    <string name="it_s_highly_recommended_to_use_baldphone_s_home_screen_as_the_default_home_launcher">One last
        thing\nIt\'s highly recommended to use Baldphone\'s home screen as the default home launcher
    </string>
    <string name="language">language</string>
    <string name="language_settings">Language</string>
    <string name="large">Large</string>
    <string name="last_update_subtext">Hi\nBaldPhone was updated.\npills now work differently.\nall of your pills were
        removed, you can add them again in the pills page.\n sorry for the inconvenient
    </string>
    <string name="left">Left</string>
    <string name="left_handed">Left Handed</string>
    <string name="light">Light</string>
    <string name="location">Location</string>
    <string name="long_presses">Long Presses</string>
    <string name="long_presses_subtext">Choose if you want to use long presses or regular ones.\Long presses are
        recommended if hands are shaking.\nWhen choosing long presses Vibration Feedback and Arrows Swiping should be on
        too.
    </string>
    <string name="emergency_services">Emergency Services</string>
    <string name="mail">Mail</string>
    <string name="manual">Manual</string>
    <string name="maps">Maps</string>
    <string name="medium">Medium</string>
    <string name="medium_level">Medium Level</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="missed">Missed</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="monday">Monday</string>
    <string name="more">more</string>
    <string name="morning">Morning</string>
    <string name="name">Name</string>
    <string name="named__">named</string>
    <string name="new_alarm___was_created">new alarm %s was created!</string>
    <string name="next">Next</string>
    <string name="nfc">NFC</string>
    <string name="no">No</string>
    <string name="photos">Photos</string>
    <string name="pills">Pills</string>
    <string name="recent">Recent</string>
    <string name="small">Small</string>
    <string name="videos">Videos</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="pending_update">Pending Update</string>
    <string name="download">Download</string>
    <string name="current_version">Current Version:\n</string>
    <string name="new_version">New Version:\n</string>
    <string name="new_updates_are_ready_to_be_downloaded">New updates are ready to be downloaded</string>
    <string name="what_s_new">What\'s new</string>
    <string name="installing_doesn_t_work">Installing doesn\'t work?</string>
    <string name="download_progress">Download Progress</string>
</resources>