<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Uriah Shaul Mandel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="?bald_background">

    <com.bald.uriah.baldphone.views.BaldTitleBar
            android:id="@+id/bald_title_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/pending_update"/>

    <TextView
            android:id="@+id/textView2"
            style="@style/BackgroundText.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/new_updates_are_ready_to_be_downloaded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bald_title_bar"/>

    <TextView
            android:id="@+id/tv_current_version"
            style="@style/BackgroundText.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/current_version"
            app:layout_constraintEnd_toStartOf="@+id/tv_new_version"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
            android:id="@+id/tv_new_version"
            style="@style/BackgroundText.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_current_version"
            app:layout_constraintTop_toTopOf="@+id/tv_current_version"/>


    <TextView
            android:id="@+id/textView6"
            style="@style/BackgroundText.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/what_s_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_version"/>

    <TextView
            android:id="@+id/tv_change_log"
            style="@style/BackgroundText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>

    <com.bald.uriah.baldphone.views.BaldButton
            android:id="@+id/bt"
            style="@style/BackgroundText.Huge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_for_buttons"
            android:padding="16dp"
            android:text="@string/download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_log"
            app:layout_constraintVertical_bias="0.72"/>

    <com.bald.uriah.baldphone.views.BaldButton
            android:id="@+id/bt_re"
            android:visibility="invisible"
            style="@style/BackgroundText.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/style_for_buttons_rectangle"
            android:padding="5dp"
            android:text="@string/installing_doesn_t_work"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
            android:id="@+id/pb"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintVertical_bias="0.7"
            android:max="100"
            android:visibility="invisible"
            android:progressTint="?bald_decoration_on_background"
            android:progressBackgroundTint="?bald_hint_on_background"
            android:progress="50"
            app:layout_constraintBottom_toTopOf="@+id/bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_log"/>

    <TextView
            android:visibility="invisible"
            android:id="@+id/tv_download_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/download_progress"
            style="@style/BackgroundText"
            app:layout_constraintBottom_toTopOf="@+id/pb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>