<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?bald_background">

    <com.bald.uriah.baldphone.views.BaldTitleBar
        android:id="@+id/bald_title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/font" />

    <include
        android:id="@+id/font_seek_bar"
        layout="@layout/volume_seek_bar"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bald_title_bar"
        app:layout_constraintVertical_bias="0.752" />

    <TextView
        android:id="@+id/huge"
        style="@style/BackgroundText.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/large"
        app:layout_constraintEnd_toEndOf="@+id/font_seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/font_seek_bar"

        />

    <TextView
        android:id="@+id/tiny"
        style="@style/BackgroundText.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/small"
        app:layout_constraintStart_toStartOf="@+id/font_seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/font_seek_bar"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/example_of_different_text_sizes"
        android:textColor="?bald_hint_on_background"
        android:textSize="@dimen/medium"
        app:layout_constraintBottom_toTopOf="@+id/example"
        app:layout_constraintEnd_toEndOf="@+id/example"
        app:layout_constraintStart_toStartOf="@+id/example" />


    <LinearLayout
        android:id="@+id/example"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/font_seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bald_title_bar"/>


</androidx.constraintlayout.widget.ConstraintLayout>